deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp
  namespace: ted523-istio
  labels:
    app: goapp
spec:
  selector:
    matchLabels:
      app: goapp
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
      - name: goapp
        image: durellirsd/go-micro-comunication:v8
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort: 3010
          name: goapp
      restartPolicy: Always
