gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: go-appgateway
  namespace: ted523-istio
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-tls
    hosts:
    - "nees.jorgeleandro.dev"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: goapp-virtualservice
  namespace: ted523-istio
spec:
  hosts:
  - "nees.jorgeleandro.dev"
  gateways:
  - go-appgateway
  http:
  - route:
    - destination:
        host: goapp
        port:
          number: 80
